added styles files

--- a/fcc-test-suite-template-master/css/style.css
+++ b/fcc-test-suite-template-master/css/style.css
@@ -8,9 +8,8 @@ body {
   margin: 0;
 }
 
-
 body::before {
-  content: '';
+  content: "";
   position: fixed;
   top: 0;
   left: 0;
@@ -28,4 +27,17 @@ body::before {
   background-repeat: no-repeat;
   background-position: center;
 }
-
+h1,
+p {
+  margin-top: 0;
+  margin-bottom: 0.5rem;
+  font-size: 1.13rem;
+  font-weight: 350;
+  line-height: 1.4;
+}
+label {
+  display: flex;
+  align-items: center;
+  font-size: 1.13rem;
+  margin-bottom: 0.5rem;
+}
