--- a/fcc-test-suite-template-master/css/style.css
+++ b/fcc-test-suite-template-master/css/style.css
@@ -42,19 +42,11 @@ label {
   margin-bottom: 0.5rem;
 }
 
-
-input,
-button,
-select,
-textarea {
+input {
   margin: 0;
   font-family: inherit;
   font-size: inherit;
   line-height: inherit;
-}
-
-button {
-  border: none;
 }
 
 .container {
@@ -79,55 +71,29 @@ button {
   margin-bottom: 1.875rem;
 }
 
-
 .description {
   font-style: italic;
-    font-weight: 200;
-    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.4);
-  }
-  
-  .clue {
-    margin-left: 0.25rem;
-    font-size: 0.9rem;
-    color: #e4e4e4;
-  }
-  
-  .text-center {
-    text-align: center;
-  }
-  
+  font-weight: 200;
+  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.4);
+}
 
-  
-  form {
-    background: var(--color-darkblue-alpha);
-    padding: 2.5rem 0.625rem;
-    border-radius: 0.25rem;
-  }
-  
-  @media (min-width: 480px) {
-    form {
-      padding: 2.5rem;
-    }
-  }
-  
-  .form-group {
-    margin: 0 auto 1.25rem auto;
-    padding: 0.25rem;
-  }
-  
-  .form-control {
-    display: block;
-    width: 100%;
-    height: 2.375rem;
-    padding: 0.375rem 0.75rem;
-    color: #495057;
-    background-color: #fff;
-    background-clip: padding-box;
-    border: 1px solid #ced4da;
-    border-radius: 0.25rem;
-    transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-  }
+.form-group {
+  margin: 0 auto 1.25rem auto;
+  padding: 0.25rem;
+}
 
+.form-control {
+  display: block;
+  width: 100%;
+  height: 2.375rem;
+  padding: 0.375rem 0.75rem;
+  color: #495057;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid #ced4da;
+  border-radius: 0.25rem;
+  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
 
 .form-control:focus {
   border-color: #80bdff;
@@ -143,13 +109,6 @@ button {
   min-width: 1.25rem;
 }
 
-.input-textarea {
-  min-height: 120px;
-  width: 100%;
-  padding: 0.625rem;
-  resize: vertical;
-}
-
 .submit-button {
   display: block;
   width: 100%;
@@ -159,5 +118,3 @@ button {
   border-radius: 2px;
   cursor: pointer;
 }
-  
-
